--- a/css/responsive.css
+++ b/css/responsive.css
@@ -327,7 +327,10 @@ input, textarea {
 
 #simplemodal-container {
 	width: 334px !important;
-	padding: 20px 10px 20px 10px !important;
+	padding-top : 20px !important;
+       padding-right : 10px !important;
+       padding-bottom: 20px !important;
+       padding-left: 10px!important;
 	margin-left:0px !important;
 }
 .desc-one-half {
